proxy/envoy/wasm/example/envoy-wasm-example.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 10000 }
      filter_chains:
        - filters:
            name: envoy.filters.network.http_connection_manager # https://www.envoyproxy.io/docs/envoy/latest/configuration/http/http_conn_man/http_conn_man#config-http-conn-man
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              codec_type: AUTO
              stat_prefix: ex
              route_config: #https://www.envoyproxy.io/docs/envoy/latest/configuration/http/http_conn_man/route_matching
                name: all
                virtual_hosts:
                  - name: example
                    domains:
                      - '*'
                    routes:
                      - match: { prefix: / } 
                        route:
                          cluster: cluster_0
              http_filters:
              - name: envoy.filters.http.wasm
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                  config:
                    name: "my_plugin"
                    vm_config:
                      runtime: "envoy.wasm.runtime.v8"
                      code:
                        local:
                          filename: "/home/vivek/example-filter.wasm"
                      allow_precompiled: true
              - name: envoy.filters.http.router #https://www.envoyproxy.io/docs/envoy/latest/configuration/http/http_filters/router_filter#config-http-filters-router

  clusters:
    - name: cluster_0
      connect_timeout: 30s
      load_assignment:
        cluster_name: cluster_0
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: 127.0.0.1, port_value: 1447 }
